--- a/containers/htpc-ui/webroot/index.html
+++ b/containers/htpc-ui/webroot/index.html
@@ -7,8 +7,8 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
-<link rel="shortcut icon" sizes="128x128" href="images/superman.png"> 
-<link rel="apple-touch-icon-precomposed" sizes="128x128" href="images/superman.png"> 
+<link rel="shortcut icon" sizes="128x128" href="images/superman.png">
+<link rel="apple-touch-icon-precomposed" sizes="128x128" href="images/superman.png">
 
 <link rel="icon" type="image/png" href="images/superman.png" />
 
@@ -155,6 +155,13 @@
         <a href="#" data-subdomain="cups">
             <div class="boxInner">
                 <img src="images/printer.png"></img>
+            </div>
+        </a>
+    </div>
+    <div class="box">
+        <a href="#" data-subdomain="roomba">
+            <div class="boxInner">
+                <img src="images/roomba.png"></img>
             </div>
         </a>
     </div>
