Misc homepage fixes:
- svg instead of png
- direct people directly to the (WIP) roomba dashboard

--- a/containers/htpc-ui/webroot/index.html
+++ b/containers/htpc-ui/webroot/index.html
@@ -161,7 +161,7 @@
     <div class="box">
         <a href="#" data-subdomain="roomba">
             <div class="boxInner">
-                <img src="images/roomba.png"></img>
+                <img src="images/roomba.svg"></img>
             </div>
         </a>
     </div>
