Add a link to home-assistant on the homepage!

--- a/containers/htpc-ui/webroot/index.html
+++ b/containers/htpc-ui/webroot/index.html
@@ -123,6 +123,13 @@
         </a>
     </div>
     <div class="box">
+        <a href="#" data-subdomain="home-assistant">
+            <div class="boxInner">
+                <img src="images/home-assistant.svg"></img>
+            </div>
+        </a>
+    </div>
+    <div class="box">
         <a href="#" data-subdomain="sync">
             <div class="boxInner">
                 <img src="images/sync.png"></img>
