Some more polish of the htpc-ui container.

--- a/containers/htpc-ui/webroot/index.html
+++ b/containers/htpc-ui/webroot/index.html
@@ -130,18 +130,18 @@
         </a>
     </div>
     <div class="box">
-        <a href="#" data-subdomain="sync">
-            <div class="boxInner">
-                <img src="images/sync.png"></img>
-                <div class="boxTextBottom">Sync</div>
-            </div>
-        </a>
-    </div>
-    <div class="box">
         <a href="#" data-subdomain="media">
             <div class="boxInner">
                 <img src="images/media.png"></img>
                 <div class="boxTextBottom">Media</div>
+            </div>
+        </a>
+    </div>
+    <div class="box">
+        <a href="#" data-subdomain="sonarr">
+            <div class="boxInner">
+                <img src="images/sonarr.png"></img>
+                <div class="boxTextBottom">sonarr</div>
             </div>
         </a>
     </div>
@@ -155,7 +155,7 @@
         <a class="help" href="/instructions.html">?</a>
     </div>
     <div class="box">
-        <a href="#" data-subdomain="cups">
+        <a href="#" data-subdomain="lloyd">
             <div class="boxInner">
                 <img src="images/printer.png"></img>
             </div>
